# jsk_openni_kinect

./: .travis.yml  README.md  apt-get-intall-libopenni-sensor-primesense.diff  apt-get-intall-libopenni-sensor-primesense.sh  apt-get-intall-primesense-nite-nonfree.sh
kinect_near_mode_calibration/: CMakeLists.txt  catkin.cmake  index.rst  manifest.xml  package.xml
kinect_near_mode_calibration/launch/: acquire_data.launch  kinect_near_mode_calibration.launch
kinect_near_mode_calibration/launch/img/: opencv_book.odp
kinect_near_mode_calibration/src/: acquire_data_command.cpp  calibrate.cpp
openni2_tracker/: .gitignore  CMakeLists.txt  README.md  package.xml  run
openni2_tracker/launch/: tracker.launch
openni2_tracker/src/: openni2_tracker.cpp
openni_pointer/: CMakeLists.txt  catkin.cmake  manifest.xml  openni_pointer.xml  package.xml
openni_pointer/src/: openni_pointer.cpp
openni_scene/: CMakeLists.txt  catkin.cmake  manifest.xml  package.xml
openni_scene/src/: openni_scene.cpp
openni_swipe/: CMakeLists.txt  catkin.cmake  manifest.xml
openni_swipe/src/: openni_swipe.cpp
